added database and add action

--- a/app/src/main/res/layout/add_edit_place.xml
+++ b/app/src/main/res/layout/add_edit_place.xml
@@ -50,6 +50,7 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/checklist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/edit_field"
