--- a/app/src/main/res/menu/save.xml
+++ b/app/src/main/res/menu/save.xml
@@ -9,5 +9,8 @@
         android:title="@string/save"
         android:icon="@drawable/ic_done"
         app:showAsAction="always" />
-
+    <item
+        android:id="@+id/action_delete"
+        android:title="@string/delete"
+        app:showAsAction="never" />
 </menu>
