--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,12 @@
         <item name="android:textColorHint">@color/black</item>
         <item name="android:padding">10dp</item>
     </style>
-
+    <!--add edi fields styles-->
+    <style name="detail_field">
+        <item name="android:background">@color/input</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
