--- a/app/src/main/res/layout/add_edit_place.xml
+++ b/app/src/main/res/layout/add_edit_place.xml
@@ -48,6 +48,18 @@
             style="@style/edit_field"/>
 
     </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center">
+
+    <ImageButton
+        android:id="@+id/place_image_input"
+        android:layout_width="75dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="10dp"/>
+
+</LinearLayout>
 
     <EditText
         android:id="@+id/checklist"
